test/assignment/undefined.lox
unknown = "what" // error: undeclared variable 'unknown'
